# RayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  Capture.cap  README.md
Assets/Shaders/: BVHNode.slang  FullScreen.slang  HitRecord.slang  Imgui.slang  Interval.slang  Material.slang  Random.slang  Ray.slang  RayTracing.slang  Sphere.slang  TLAS.slang  Triangle.slang  World.slang
Assets/Shaders/SkyRendering/: Common.slang  RenderSkyCommon.slang  RenderSkyPathTracing.slang  RenderSkyRayMarching.slang  SkyAtmosphereCommon.slang
RayTracing/: imgui.ini
RayTracing/src/: Renderer.cpp  Renderer.h  Scene.h  WalnutApp.cpp
Scenes/: CubeWorld.json  TestScene.json
assets/frame_graphs/: graph.json
assets/shaders/: debug_bvh.glsl  platform.h  raytracing.glsl  raytracing.h  scene.h
assets/shaders/programs/: ray_tracing.json
src/: AABB.hpp  Application.hpp  Assert.hpp  BVHNode.cpp  BVHNode.hpp  Camera.cpp  Camera.hpp  Defines.hpp  Hittable.hpp  HittableList.hpp  Image.hpp  Interval.hpp  Log.cpp  Log.hpp  Mat4.hpp  Material.cpp  Material.hpp  PCH.h  PathTracer.cpp  PathTracer.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  RendererCPU.cpp  RendererVk.cpp  Scene.cpp  Scene.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneUI.cpp  SceneUI.hpp  SkyRenderer.cpp  SkyRenderer.hpp  Sphere.hpp  TLAS.cpp  TLAS.hpp  Textures.hpp  Transform.hpp  Triangle.hpp  Vec2.hpp  (+4 more)
src/Application/: Input.cpp  Input.hpp  Keys.cpp  Keys.hpp  Window.cpp  Window.hpp
src/Core/: Array.hpp  Assert.hpp  AssertWin32.cpp  Bit.cpp  Bit.hpp  Clock.cpp  Clock.hpp  Color.cpp  Color.hpp  DataStructures.cpp  DataStructures.hpp  Defines.hpp  Event.cpp  Event.hpp  Exceptions.hpp  File.cpp  File.hpp  FreeIndexPool.cpp  FreeIndexPool.hpp  Gltf.cpp  Gltf.hpp  HashMap.hpp  Input.cpp  Input.hpp  Job.cpp  Job.hpp  Log.cpp  Log.hpp  Memory.cpp  Memory.hpp  MurmurHash.cpp  MurmurHash.h  Numerics.cpp  Numerics.hpp  Platform.hpp  Process.cpp  Process.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourcePool.hpp  (+8 more)
src/Platform/: File.hpp  FileIO.h  FileIOWin32.cpp  FileWin32.cpp  HMutex.hpp  HMutexWin32.cpp  HThread.hpp  HThreadWin32.cpp  Platform.hpp  PlatformSDL3.cpp  PlatformWin32.cpp  Process.hpp  ProcessWin32.cpp
src/Renderer/: AsynchronousLoader.cpp  AsynchronousLoader.hpp  CommandBuffer.cpp  CommandBuffer.hpp  FrameGraph.cpp  GPUDevice.cpp  GPUDevice.hpp  GPUEnum.hpp  GPUProfiler.cpp  GPUProfiler.hpp  GPUResources.cpp  GPUResources.hpp  HelixImgui.cpp  HelixImgui.hpp  Renderer.cpp  Renderer.hpp  ResourcesLoader.cpp  Scene.cpp  Scene.hpp  SpirvParser.cpp  SpirvParser.hpp
src/Vulkan/: VkDeviceManager.cpp  VkDeviceManager.h  VkErr.cpp  VkErr.h  VkFeatureQuery.h  VkPipelineStates.cpp  VkPipelineStates.hpp  VkResourceManager.cpp  VkResourceManager.hpp  VkResources.hpp  VkShaderCompilation.cpp  VkShaderCompilation.h  VkStagingBuffer.cpp  VkStagingBuffer.h  VkStagingBuffer.hpp  VkUtils.cpp  VkUtils.hpp  VulkanTypes.cpp  VulkanTypes.hpp  VulkanUtils.cpp  VulkanUtils.hpp
